dataset1235/2025-2/2318198438/users/1240871306/executions/1897677159_4233865845.log
== SUBMISSION (2025-08-23 20:01:46)
-- CODE: 
celsius = float(input("temperatura em celsius: "))
fahrenheit = (9/5* celsius) + 32
print(round (fahrenheit,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
temperatura em celsius: -40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
temperatura em celsius: 14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
temperatura em celsius: 212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
temperatura em celsius: 68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
temperatura em celsius: 32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
temperatura em celsius: 86.9
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-31 21:36:36)
-- CODE: 
celsius = float(input("temperatura em celsius: "))
fahrenheit = (9/5* celsius) + 32
print(round (fahrenheit,2))
-- EXECUTION TIME: 
0.0133333
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
temperatura em celsius: -40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
temperatura em celsius: 14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
temperatura em celsius: 212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
temperatura em celsius: 68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
temperatura em celsius: 32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
temperatura em celsius: 86.9
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-23 19:51:42)
-- CODE: 
celsius = float(input("temperatura em celsius: "))
fahrenheit = 1.8celsius + 32,
print(round(fahrenheit, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8celsius + 32,
                   ^
SyntaxError: invalid decimal literal
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8celsius + 32,
                   ^
SyntaxError: invalid decimal literal
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8celsius + 32,
                   ^
SyntaxError: invalid decimal literal
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8celsius + 32,
                   ^
SyntaxError: invalid decimal literal
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8celsius + 32,
                   ^
SyntaxError: invalid decimal literal
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8celsius + 32,
                   ^
SyntaxError: invalid decimal literal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-23 19:42:50)
-- CODE: 
celsius = float(input("temperatura em celsius: "))
kelvin = celsius + 273.15
print(round(kelvin, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
temperatura em celsius: 233.15
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
temperatura em celsius: 263.15
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
temperatura em celsius: 373.15
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
temperatura em celsius: 293.4
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
temperatura em celsius: 273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
temperatura em celsius: 303.65
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-23 19:47:23)
-- CODE: 
celsius = float(input("temperatura em celsius: "))
kelvin = celsius + 273.15
print(round(kelvin, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
temperatura em celsius: 233.15
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
temperatura em celsius: 263.15
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
temperatura em celsius: 373.15
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
temperatura em celsius: 293.4
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
temperatura em celsius: 273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
temperatura em celsius: 303.65
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-23 19:41:47)
-- CODE: 
celsius = float(input("temperatura em celsius: "))
kelvin = 40 + 273.15
print(round(kelvin, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
temperatura em celsius: 313.15
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
temperatura em celsius: 313.15
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
temperatura em celsius: 313.15
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
temperatura em celsius: 313.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
temperatura em celsius: 313.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
temperatura em celsius: 313.15
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 19:45:31)
-- CODE: 
celsius = float(input("Temperatura em celsius: "))
kelvin = celsius + 273.15
print(round(kelvin, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
Temperatura em celsius: 233.15
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
Temperatura em celsius: 263.15
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
Temperatura em celsius: 373.15
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
Temperatura em celsius: 293.4
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
Temperatura em celsius: 273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
Temperatura em celsius: 303.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-23 19:52:52)
-- CODE: 
celsius = float(input("temperatura em celsius: "))
fahrenheit = 1.8celsius + 32
print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8celsius + 32
                   ^
SyntaxError: invalid decimal literal
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8celsius + 32
                   ^
SyntaxError: invalid decimal literal
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8celsius + 32
                   ^
SyntaxError: invalid decimal literal
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8celsius + 32
                   ^
SyntaxError: invalid decimal literal
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8celsius + 32
                   ^
SyntaxError: invalid decimal literal
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8celsius + 32
                   ^
SyntaxError: invalid decimal literal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 19:44:46)
-- CODE: 
celsius = float(input("Temperatura em celsius: "))
kelvin = celsius + 273.15
print(round(kelvin, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
Temperatura em celsius: 233.15
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
Temperatura em celsius: 263.15
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
Temperatura em celsius: 373.15
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
Temperatura em celsius: 293.4
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
Temperatura em celsius: 273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
Temperatura em celsius: 303.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 19:45:52)
-- CODE: 
celsius = float(input("Temperatura em celsius: "))
kelvin = celsius + 273.15
print(round(kelvin, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
Temperatura em celsius: 233.15
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
Temperatura em celsius: 263.15
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
Temperatura em celsius: 373.15
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
Temperatura em celsius: 293.4
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
Temperatura em celsius: 273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
Temperatura em celsius: 303.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 20:01:45)
-- CODE: 
celsius = float(input("temperatura em celsius: "))
fahrenheit = (9/5* celsius) + 32
print(round (fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
temperatura em celsius: -40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
temperatura em celsius: 14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
temperatura em celsius: 212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
temperatura em celsius: 68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
temperatura em celsius: 32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
temperatura em celsius: 86.9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-23 19:45:52)
-- CODE: 
celsius = float(input("Temperatura em celsius: "))
kelvin = celsius + 273.15
print(round(kelvin, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
Temperatura em celsius: 233.15
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
Temperatura em celsius: 263.15
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
Temperatura em celsius: 373.15
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
Temperatura em celsius: 293.4
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
Temperatura em celsius: 273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
Temperatura em celsius: 303.65
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-23 20:01:47)
-- CODE: 
celsius = float(input("temperatura em celsius: "))
fahrenheit = (9/5* celsius) + 32
print(round (fahrenheit,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
temperatura em celsius: -40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
temperatura em celsius: 14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
temperatura em celsius: 212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
temperatura em celsius: 68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
temperatura em celsius: 32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
temperatura em celsius: 86.9
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-23 19:52:31)
-- CODE: 
celsius = float(input("temperatura em celsius: "))
fahrenheit = 1.8celsius + 32
print(round(fahrenheit, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8celsius + 32
                   ^
SyntaxError: invalid decimal literal
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8celsius + 32
                   ^
SyntaxError: invalid decimal literal
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8celsius + 32
                   ^
SyntaxError: invalid decimal literal
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8celsius + 32
                   ^
SyntaxError: invalid decimal literal
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8celsius + 32
                   ^
SyntaxError: invalid decimal literal
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8celsius + 32
                   ^
SyntaxError: invalid decimal literal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-23 19:42:44)
-- CODE: 
celsius = float(input("temperatura em celsius: "))
kelvin = celsius 40 + 273.15
print(round(kelvin, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 2
    kelvin = celsius 40 + 273.15
                     ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 2
    kelvin = celsius 40 + 273.15
                     ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 2
    kelvin = celsius 40 + 273.15
                     ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 2
    kelvin = celsius 40 + 273.15
                     ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 2
    kelvin = celsius 40 + 273.15
                     ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 2
    kelvin = celsius 40 + 273.15
                     ^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-23 19:43:14)
-- CODE: 
celsius = float(input("temperatura em celsius: "))
kelvin = celsius + 273.15
print(round(kelvin, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
temperatura em celsius: 233.15
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
temperatura em celsius: 263.15
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
temperatura em celsius: 373.15
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
temperatura em celsius: 293.4
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
temperatura em celsius: 273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
temperatura em celsius: 303.65
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 19:42:04)
-- CODE: 
celsius = float(input("temperatura em celsius: "))
kelvin = 40 + 273.15
print(round(kelvin, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
temperatura em celsius: 313.15
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
temperatura em celsius: 313.15
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
temperatura em celsius: 313.15
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
temperatura em celsius: 313.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
temperatura em celsius: 313.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
temperatura em celsius: 313.15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-23 19:45:30)
-- CODE: 
celsius = float(input("Temperatura em celsius: "))
kelvin = celsius + 273.15
print(round(kelvin, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
Temperatura em celsius: 233.15
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
Temperatura em celsius: 263.15
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
Temperatura em celsius: 373.15
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
Temperatura em celsius: 293.4
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
Temperatura em celsius: 273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
Temperatura em celsius: 303.65
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 19:53:19)
-- CODE: 
celsius = float(input("temperatura em celsius: "))
fahrenheit = 1.8 celsius + 32
print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8 celsius + 32
                     ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8 celsius + 32
                     ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8 celsius + 32
                     ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8 celsius + 32
                     ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8 celsius + 32
                     ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8 celsius + 32
                     ^^^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 19:52:30)
-- CODE: 
celsius = float(input("temperatura em celsius: "))
fahrenheit = 1.8celsius + 32
print(round(fahrenheit, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8celsius + 32
                   ^
SyntaxError: invalid decimal literal
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8celsius + 32
                   ^
SyntaxError: invalid decimal literal
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8celsius + 32
                   ^
SyntaxError: invalid decimal literal
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8celsius + 32
                   ^
SyntaxError: invalid decimal literal
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8celsius + 32
                   ^
SyntaxError: invalid decimal literal
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8celsius + 32
                   ^
SyntaxError: invalid decimal literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 19:41:44)
-- CODE: 
celsius = float(input("temperatura em celsius: "))
kelvin = 40 + 273.15
print(round(kelvin, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
temperatura em celsius: 313.15
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
temperatura em celsius: 313.15
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
temperatura em celsius: 313.15
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
temperatura em celsius: 313.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
temperatura em celsius: 313.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
temperatura em celsius: 313.15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-23 19:43:09)
-- CODE: 
celsius = float(input("temperatura em celsius: "))
kelvin = celsius + 273.15
print(round(kelvin, 2))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
temperatura em celsius: 233.15
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
temperatura em celsius: 263.15
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
temperatura em celsius: 373.15
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
temperatura em celsius: 293.4
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
temperatura em celsius: 273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
temperatura em celsius: 303.65
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 20:00:11)
-- CODE: 
celsius = float(input("temperatura em celsius: "))
fahrenheit = (9/5* celsius) + 32
print("fahrenheit :%.2f"% far_temp)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("fahrenheit :%.2f"% far_temp)
                              ^^^^^^^^
NameError: name 'far_temp' is not defined
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("fahrenheit :%.2f"% far_temp)
                              ^^^^^^^^
NameError: name 'far_temp' is not defined
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("fahrenheit :%.2f"% far_temp)
                              ^^^^^^^^
NameError: name 'far_temp' is not defined
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("fahrenheit :%.2f"% far_temp)
                              ^^^^^^^^
NameError: name 'far_temp' is not defined
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("fahrenheit :%.2f"% far_temp)
                              ^^^^^^^^
NameError: name 'far_temp' is not defined
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("fahrenheit :%.2f"% far_temp)
                              ^^^^^^^^
NameError: name 'far_temp' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 19:34:02)
-- CODE: 
celsius = float(input("temperatura em celsius: "))
fahrenheit = celsius + 273.15
print(round(fahrenheit, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
temperatura em celsius: 233.15
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
temperatura em celsius: 263.15
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
temperatura em celsius: 373.15
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
temperatura em celsius: 293.4
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
temperatura em celsius: 273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
temperatura em celsius: 303.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 01:00:03)
-- CODE: 
celsius = float(input("temperatura em celsius: "))
fahrenheit = (9/5* celsius) + 32
print(round (fahrenheit,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
temperatura em celsius: -40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
temperatura em celsius: 14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
temperatura em celsius: 212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
temperatura em celsius: 68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
temperatura em celsius: 32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
temperatura em celsius: 86.9
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-23 19:52:34)
-- CODE: 
celsius = float(input("temperatura em celsius: "))
fahrenheit = 1.8celsius + 32
print(round(fahrenheit, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8celsius + 32
                   ^
SyntaxError: invalid decimal literal
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8celsius + 32
                   ^
SyntaxError: invalid decimal literal
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8celsius + 32
                   ^
SyntaxError: invalid decimal literal
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8celsius + 32
                   ^
SyntaxError: invalid decimal literal
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8celsius + 32
                   ^
SyntaxError: invalid decimal literal
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8celsius + 32
                   ^
SyntaxError: invalid decimal literal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 00:50:12)
-- CODE: 
celsius = float(input("temperatura em celsius: "))
fahrenheit = (9/5* celsius) + 32
print(round (fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
temperatura em celsius: -40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
temperatura em celsius: 14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
temperatura em celsius: 212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
temperatura em celsius: 68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
temperatura em celsius: 32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
temperatura em celsius: 86.9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 19:53:08)
-- CODE: 
celsius = float(input("temperatura em celsius: "))
fahrenheit = 1.8 celsius + 32
print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8 celsius + 32
                     ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8 celsius + 32
                     ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8 celsius + 32
                     ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8 celsius + 32
                     ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8 celsius + 32
                     ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8 celsius + 32
                     ^^^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 19:53:11)
-- CODE: 
celsius = float(input("temperatura em celsius: "))
fahrenheit = 1.8 celsius + 32
print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8 celsius + 32
                     ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8 celsius + 32
                     ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8 celsius + 32
                     ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8 celsius + 32
                     ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8 celsius + 32
                     ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8 celsius + 32
                     ^^^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 19:52:51)
-- CODE: 
celsius = float(input("temperatura em celsius: "))
fahrenheit = 1.8celsius + 32
print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8celsius + 32
                   ^
SyntaxError: invalid decimal literal
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8celsius + 32
                   ^
SyntaxError: invalid decimal literal
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8celsius + 32
                   ^
SyntaxError: invalid decimal literal
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8celsius + 32
                   ^
SyntaxError: invalid decimal literal
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8celsius + 32
                   ^
SyntaxError: invalid decimal literal
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8celsius + 32
                   ^
SyntaxError: invalid decimal literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 01:14:40)
-- CODE: 
celsius = float(input("temperatura em celsius: "))
fahrenheit = (9/5* celsius) + 32
print(round (fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
temperatura em celsius: -40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
temperatura em celsius: 14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
temperatura em celsius: 212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
temperatura em celsius: 68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
temperatura em celsius: 32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
temperatura em celsius: 86.9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 19:52:33)
-- CODE: 
celsius = float(input("temperatura em celsius: "))
fahrenheit = 1.8celsius + 32
print(round(fahrenheit, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8celsius + 32
                   ^
SyntaxError: invalid decimal literal
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8celsius + 32
                   ^
SyntaxError: invalid decimal literal
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8celsius + 32
                   ^
SyntaxError: invalid decimal literal
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8celsius + 32
                   ^
SyntaxError: invalid decimal literal
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8celsius + 32
                   ^
SyntaxError: invalid decimal literal
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8celsius + 32
                   ^
SyntaxError: invalid decimal literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 19:51:46)
-- CODE: 
celsius = float(input("temperatura em celsius: "))
fahrenheit = 1.8celsius + 32,
print(round(fahrenheit, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8celsius + 32,
                   ^
SyntaxError: invalid decimal literal
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8celsius + 32,
                   ^
SyntaxError: invalid decimal literal
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8celsius + 32,
                   ^
SyntaxError: invalid decimal literal
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8celsius + 32,
                   ^
SyntaxError: invalid decimal literal
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8celsius + 32,
                   ^
SyntaxError: invalid decimal literal
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8celsius + 32,
                   ^
SyntaxError: invalid decimal literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-23 19:52:50)
-- CODE: 
celsius = float(input("temperatura em celsius: "))
fahrenheit = 1.8celsius + 32
print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8celsius + 32
                   ^
SyntaxError: invalid decimal literal
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8celsius + 32
                   ^
SyntaxError: invalid decimal literal
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8celsius + 32
                   ^
SyntaxError: invalid decimal literal
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8celsius + 32
                   ^
SyntaxError: invalid decimal literal
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8celsius + 32
                   ^
SyntaxError: invalid decimal literal
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8celsius + 32
                   ^
SyntaxError: invalid decimal literal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-23 19:51:47)
-- CODE: 
celsius = float(input("temperatura em celsius: "))
fahrenheit = 1.8celsius + 32,
print(round(fahrenheit, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8celsius + 32,
                   ^
SyntaxError: invalid decimal literal
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8celsius + 32,
                   ^
SyntaxError: invalid decimal literal
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8celsius + 32,
                   ^
SyntaxError: invalid decimal literal
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8celsius + 32,
                   ^
SyntaxError: invalid decimal literal
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8celsius + 32,
                   ^
SyntaxError: invalid decimal literal
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8celsius + 32,
                   ^
SyntaxError: invalid decimal literal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-23 19:53:02)
-- CODE: 
celsius = float(input("temperatura em celsius: "))
fahrenheit = 1.8 celsius + 32
print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8 celsius + 32
                     ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8 celsius + 32
                     ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8 celsius + 32
                     ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8 celsius + 32
                     ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8 celsius + 32
                     ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8 celsius + 32
                     ^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-23 19:51:44)
-- CODE: 
celsius = float(input("temperatura em celsius: "))
fahrenheit = 1.8celsius + 32,
print(round(fahrenheit, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8celsius + 32,
                   ^
SyntaxError: invalid decimal literal
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8celsius + 32,
                   ^
SyntaxError: invalid decimal literal
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8celsius + 32,
                   ^
SyntaxError: invalid decimal literal
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8celsius + 32,
                   ^
SyntaxError: invalid decimal literal
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8celsius + 32,
                   ^
SyntaxError: invalid decimal literal
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8celsius + 32,
                   ^
SyntaxError: invalid decimal literal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-23 19:44:30)
-- CODE: 
celsius = float(input("temperatura em celsius: "))
kelvin = celsius + 273.15
print(round(kelvin, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
temperatura em celsius: 233.15
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
temperatura em celsius: 263.15
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
temperatura em celsius: 373.15
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
temperatura em celsius: 293.4
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
temperatura em celsius: 273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
temperatura em celsius: 303.65
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 19:53:22)
-- CODE: 
celsius = float(input("temperatura em celsius: "))
fahrenheit = 1.8 celsius + 32
print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8 celsius + 32
                     ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8 celsius + 32
                     ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8 celsius + 32
                     ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8 celsius + 32
                     ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8 celsius + 32
                     ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8 celsius + 32
                     ^^^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-23 20:00:13)
-- CODE: 
celsius = float(input("temperatura em celsius: "))
fahrenheit = (9/5* celsius) + 32
print("fahrenheit :%.2f"% far_temp)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("fahrenheit :%.2f"% far_temp)
                              ^^^^^^^^
NameError: name 'far_temp' is not defined
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("fahrenheit :%.2f"% far_temp)
                              ^^^^^^^^
NameError: name 'far_temp' is not defined
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("fahrenheit :%.2f"% far_temp)
                              ^^^^^^^^
NameError: name 'far_temp' is not defined
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("fahrenheit :%.2f"% far_temp)
                              ^^^^^^^^
NameError: name 'far_temp' is not defined
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("fahrenheit :%.2f"% far_temp)
                              ^^^^^^^^
NameError: name 'far_temp' is not defined
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("fahrenheit :%.2f"% far_temp)
                              ^^^^^^^^
NameError: name 'far_temp' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 19:51:12)
-- CODE: 
celsius = float(input("temperatura em celsius: "))
fahrenheit = 1,celsius + 32,
print(round(fahrenheit, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(fahrenheit, 2))
          ^^^^^^^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(fahrenheit, 2))
          ^^^^^^^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(fahrenheit, 2))
          ^^^^^^^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(fahrenheit, 2))
          ^^^^^^^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(fahrenheit, 2))
          ^^^^^^^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(fahrenheit, 2))
          ^^^^^^^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-23 19:51:13)
-- CODE: 
celsius = float(input("temperatura em celsius: "))
fahrenheit = 1,celsius + 32,
print(round(fahrenheit, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(fahrenheit, 2))
          ^^^^^^^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(fahrenheit, 2))
          ^^^^^^^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(fahrenheit, 2))
          ^^^^^^^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(fahrenheit, 2))
          ^^^^^^^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(fahrenheit, 2))
          ^^^^^^^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(fahrenheit, 2))
          ^^^^^^^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 00:50:14)
-- CODE: 
celsius = float(input("temperatura em celsius: "))
fahrenheit = (9/5* celsius) + 32
print(round (fahrenheit,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
temperatura em celsius: -40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
temperatura em celsius: 14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
temperatura em celsius: 212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
temperatura em celsius: 68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
temperatura em celsius: 32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
temperatura em celsius: 86.9
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 01:14:41)
-- CODE: 
celsius = float(input("temperatura em celsius: "))
fahrenheit = (9/5* celsius) + 32
print(round (fahrenheit,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
temperatura em celsius: -40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
temperatura em celsius: 14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
temperatura em celsius: 212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
temperatura em celsius: 68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
temperatura em celsius: 32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
temperatura em celsius: 86.9
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 19:47:22)
-- CODE: 
celsius = float(input("temperatura em celsius: "))
kelvin = celsius + 273.15
print(round(kelvin, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
temperatura em celsius: 233.15
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
temperatura em celsius: 263.15
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
temperatura em celsius: 373.15
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
temperatura em celsius: 293.4
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
temperatura em celsius: 273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
temperatura em celsius: 303.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 19:53:00)
-- CODE: 
celsius = float(input("temperatura em celsius: "))
fahrenheit = 1.8 celsius + 32
print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8 celsius + 32
                     ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8 celsius + 32
                     ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8 celsius + 32
                     ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8 celsius + 32
                     ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8 celsius + 32
                     ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8 celsius + 32
                     ^^^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 19:51:40)
-- CODE: 
celsius = float(input("temperatura em celsius: "))
fahrenheit = 1.8celsius + 32,
print(round(fahrenheit, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8celsius + 32,
                   ^
SyntaxError: invalid decimal literal
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8celsius + 32,
                   ^
SyntaxError: invalid decimal literal
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8celsius + 32,
                   ^
SyntaxError: invalid decimal literal
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8celsius + 32,
                   ^
SyntaxError: invalid decimal literal
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8celsius + 32,
                   ^
SyntaxError: invalid decimal literal
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 2
    fahrenheit = 1.8celsius + 32,
                   ^
SyntaxError: invalid decimal literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-23 19:44:48)
-- CODE: 
celsius = float(input("Temperatura em celsius: "))
kelvin = celsius + 273.15
print(round(kelvin, 2))
-- EXECUTION TIME: 
0.0133333
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
Temperatura em celsius: 233.15
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
Temperatura em celsius: 263.15
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
Temperatura em celsius: 373.15
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
Temperatura em celsius: 293.4
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
Temperatura em celsius: 273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
Temperatura em celsius: 303.65
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-23 19:43:12)
-- CODE: 
celsius = float(input("temperatura em celsius: "))
kelvin = celsius + 273.15
print(round(kelvin, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
temperatura em celsius: 233.15
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
temperatura em celsius: 263.15
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
temperatura em celsius: 373.15
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
temperatura em celsius: 293.4
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
temperatura em celsius: 273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
temperatura em celsius: 303.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-23 19:34:04)
-- CODE: 
celsius = float(input("temperatura em celsius: "))
fahrenheit = celsius + 273.15
print(round(fahrenheit, 2))
-- EXECUTION TIME: 
0.0133333
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
temperatura em celsius: 233.15
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
temperatura em celsius: 263.15
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
temperatura em celsius: 373.15
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
temperatura em celsius: 293.4
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
temperatura em celsius: 273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
temperatura em celsius: 303.65
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
